--- a/src/Hangman.css
+++ b/src/Hangman.css
@@ -8,13 +8,13 @@
     /* display: block;
     position: relative;
     float: left; */
-    width: 80px;
+    width: 30px;
     padding: 0;
-    margin: 10px 20px 10px 0;
+    margin: 10px 10px 0 0;
     font-weight: 600;
     font-size: large;
     text-align: center;
-    line-height: 50px;
+    line-height: 30px;
     color: #FFF;
     border-radius: 5px;
     transition: all 0.2s ;
